[package]
name = "hbproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
once_cell = "1.8.0"
clap = "2.33.3"
signal-hook = "0.3.9"
async-std = "1.9.0"
futures = "0.3.16"
flexi_logger = "0.18"
log = "0.4"
hbtp={git="https://github.com/mgr9525/hbtp-rust-async.git", rev="1e4bd891ddea436218fbe7e9c1e1ba7751bdc42f"}
ruisutil={git="https://github.com/mgr9525/rust-ruisutil.git", rev="2dfd958851c634ea59e020cedf49aba640efb270"}