[package]
edition = "2021"
name = "hbproxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
clap = "2.33.3"
flexi_logger = "0.18"
futures = "0.3.16"
hex = "0.4.3"
log = "0.4"
once_cell = "1.8.0"
signal-hook = "0.3.9"
xid = "1.0.0"

serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"

# hbtp={git="https://github.com/mgr9525/hbtp-rust-async.git", rev="1e4bd891ddea436218fbe7e9c1e1ba7751bdc42f"}
# ruisutil={git="https://github.com/mgr9525/rust-ruisutil.git", rev="2dfd958851c634ea59e020cedf49aba640efb270"}

hbtp = {path = "/home/mgr/programs/rust/hbtp-rust-async"}
ruisutil = {path = "/home/mgr/programs/rust/rust-ruisutil"}
